--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,9 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.8'
     //compile 'com.loopj.android:android-async-http:1.4.9-SNAPSHOT'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    //compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    compile 'com.makeramen:roundedimageview:2.2.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+        //compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     //compile 'HTTPClient:HTTPClient:0.3-3'
     compile files('C:/Users/htammare/AndroidStudioProjects/InstaGramProject/lib/libs/org.apache.http.legacy.jar')
 }
